--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             </div>
           </div>
         </div>
+        <p>© 2023 Valentain. Todos los derechos reservados.</p>
       </div>
     </footer>
 
