Cambio en mis primeros desafios

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!--PROYECTS SLIDER-->
     <section>
-      <h2>Mis primeros <i>desafíos</i> <i class="fa-solid fa-skull"></i></h2>
+      <h2>Mis primeros <i>desafíos Latam</i> <i class="fa-solid fa-skull"></i></h2>
 
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
