Button slider agregado

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <div class="carousel-caption d-none d-md-block">
               <h5>Desafío 1: Curriculum Vitae</h5>
               <p>Construcción de mi primera página web, utilizando editor de código y etiquetas HTML.</p>
+              <button type="button" class="btn btn-light"><a class="link-button" href="https://github.com/horrorvalentain/curriculum-vitae" target="_blank">Ver en GitHub</a></button>
             </div>
           </div>
 
@@ -84,6 +85,7 @@
             <div class="carousel-caption d-none d-md-block">
               <h5>Desafío 2: Landing Page</h5>
               <p>Implementación de estilos CSS para textos, colores y fondos para definir aspectos visuales de una interfaz web.</p>
+              <button type="button" class="btn btn-light"> <a class="link-button" href="https://github.com/horrorvalentain/landing-page" target="_blank">Ver en GitHub</a></button>
             </div>
           </div>
 
@@ -92,6 +94,7 @@
             <div class="carousel-caption d-none d-md-block">
               <h5>Desafío 3: Iguana</h5>
               <p>Implementación de displays y posicionamiento de textos e imágenes.</p>
+              <button type="button" class="btn btn-light"><a class="link-button" href="https://github.com/horrorvalentain/iguana" target="_blank">Ver en GitHub</a></button>
             </div>
           </div>
 
@@ -100,6 +103,7 @@
             <div class="carousel-caption d-none d-md-block">
               <h5>Desafío 4: Cuppon</h5>
               <p>Implementación de clases de Bootstrap a través de componentes card y formularios.</p>
+              <button type="button" class="btn btn-light"><a class="link-button" href="https://github.com/horrorvalentain/cuppon" target="_blank">Ver en GitHub</a></button>
             </div>
           </div>
 
@@ -121,13 +125,13 @@
         <div class="container text-center">
           <div class="row align-items-start">
             <div class="col">
-              <p><i class="fa-brands fa-behance"></i> <a class="link-social-media" href="https://www.behance.net/vdsgner">Behance</a></p>
+              <p><i class="fa-brands fa-behance"></i> <a class="link-social-media" href="https://www.behance.net/vdsgner" target="_blank">Behance</a></p>
             </div>
             <div class="col">
-              <p><i class="fa-brands fa-linkedin-in"></i> <a class="link-social-media" href="https://www.linkedin.com/in/vdsgner">Linkedin</a></p>
+              <p><i class="fa-brands fa-linkedin-in"></i> <a class="link-social-media" href="https://www.linkedin.com/in/vdsgner" target="_blank">Linkedin</a></p>
             </div>
             <div class="col">
-              <p><i class="fa-brands fa-instagram"></i> <a class="link-social-media" href="https://www.instagram.com/venusa_rt/">Instagram</a></p>
+              <p><i class="fa-brands fa-instagram"></i> <a class="link-social-media" href="https://www.instagram.com/venusa_rt/" target="_blank">Instagram</a></p>
             </div>
           </div>
         </div>
